test/failed-3/secret/type-reconstruction/ill-typed/references/references-1.stella
// ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
language core;

extend with #references, #type-reconstruction;

fn chck(b : auto) -> auto {
  return (if true then false else true)
}

fn main(b : auto) -> Nat {
  return chck(<0xABCDEF>)
}
